<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signup"
    android:fitsSystemWindows="true"
    tools:context=".ui.view.SignUpActivity">

    <ScrollView
        android:id="@+id/my_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="135dp"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/altoys_italic"
                android:text="@string/signup_title"
                android:textColor="@color/cian_bg"
                android:textSize="60sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/et_cian_light_bg"
                    android:ems="10"
                    android:hint="@string/signup_name_hint"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:shadowColor="#77000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>

                <EditText
                    android:id="@+id/et_surname"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/et_cian_light_bg"
                    android:ems="10"
                    android:hint="@string/signup_surname_hint"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:shadowColor="#77000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/et_cian_light_bg"
                    android:ems="10"
                    android:hint="@string/signup_email_hint"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:shadowColor="#77000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/et_cian_light_bg"
                    android:ems="10"
                    android:hint="@string/signup_password_hint"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:shadowColor="#77000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/et_cian_light_bg"
                    android:ems="10"
                    android:hint="@string/signup_confirm_password_hint"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:shadowColor="#77000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_signup"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/cian_button_bg"
                    android:text="@string/signup_btn"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="7dp"
                        android:text="@string/signup_text_already_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/signup_text_log_in"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
